<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_partida"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/partida"
        app:layout_constraintStart_toEndOf="@+id/bandeira"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvJogador_1"
        android:layout_width="152dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:text="@string/jogador_1"
        app:layout_constraintStart_toStartOf="@+id/ivEqp1"
        app:layout_constraintTop_toTopOf="@+id/ivEqp1" />

    <Button
        android:id="@+id/btn_adicionar_1_1"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/mais_1"
        app:layout_constraintBottom_toTopOf="@+id/tvJogador_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivEqp1" />

    <Button
        android:id="@+id/btn_adicionar_3"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mais_3"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_adicionar_1_1"
        app:layout_constraintTop_toTopOf="@+id/btn_adicionar_1_1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_adicionar_6"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mais_6"
        app:layout_constraintStart_toEndOf="@id/btn_adicionar_3"
        app:layout_constraintTop_toTopOf="@+id/btn_adicionar_3" />

    <Button
        android:id="@+id/btn_adicionar_9"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mais_9"
        app:layout_constraintStart_toEndOf="@id/btn_adicionar_6"
        app:layout_constraintTop_toTopOf="@+id/btn_adicionar_3" />

    <Button
        android:id="@+id/btn_adicionar_12"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mais_12"
        app:layout_constraintStart_toEndOf="@id/btn_adicionar_9"
        app:layout_constraintTop_toTopOf="@+id/btn_adicionar_3" />

    <TextView
        android:id="@+id/tvJogador_2"
        android:layout_width="151dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/jogador_2"
        app:layout_constraintStart_toStartOf="@id/ivEqp2"
        app:layout_constraintTop_toBottomOf="@id/btn_adicionar_1_1" />

    <Button
        android:id="@+id/btn_adicionar_1_2"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/mais_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvJogador_2" />

    <Button
        android:id="@+id/btn_adicionar_3_2"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mais_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_adicionar_1_2"
        app:layout_constraintTop_toTopOf="@+id/btn_adicionar_1_2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_adicionar_6_2"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mais_6"
        app:layout_constraintStart_toEndOf="@id/btn_adicionar_3_2"
        app:layout_constraintTop_toTopOf="@+id/btn_adicionar_3_2" />

    <Button
        android:id="@+id/btn_adicionar_9_2"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mais_9"
        app:layout_constraintStart_toEndOf="@id/btn_adicionar_6_2"
        app:layout_constraintTop_toTopOf="@+id/btn_adicionar_3_2" />

    <Button
        android:id="@+id/btn_adicionar_12_2"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mais_12"
        app:layout_constraintStart_toEndOf="@id/btn_adicionar_9_2"
        app:layout_constraintTop_toTopOf="@+id/btn_adicionar_3_2" />

    <Button
        android:id="@+id/btn_Historico"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/hist_de_jogadas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_adicionar_3_2" />

    <Button
        android:layout_width="151dp"
        android:id="@+id/btn_zerar"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/zerar_hist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_Historico" />

    <Button
        android:layout_width="151dp"
        android:id="@+id/btn_infoNomes"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/info_nomes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_zerar" />

    <TextView
        android:id="@+id/tvPontos_1"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/pontos_eqp1"
        app:layout_constraintBottom_toTopOf="@+id/btn_adicionar_9"
        app:layout_constraintStart_toEndOf="@+id/ivPontos1" />

    <TextView
        android:id="@+id/tvPontos_2"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/pontos_eqp2"
        app:layout_constraintBottom_toTopOf="@+id/btn_adicionar_9_2"
        app:layout_constraintStart_toEndOf="@+id/ivPontos2" />

    <ImageView
        android:id="@+id/bandeira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/outline_sports_score_24"
        tools:layout_editor_absoluteY="15dp" />

    <ImageView
        android:id="@+id/ivEqp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bandeira"
        app:srcCompat="@drawable/eqp_1" />

    <ImageView
        android:id="@+id/ivEqp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_adicionar_1_1"
        app:srcCompat="@drawable/eqp_2" />

    <ImageView
        android:id="@+id/ivPontos1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toStartOf="@id/ivPontos1"
        app:layout_constraintBottom_toTopOf="@id/btn_adicionar_9"
        app:layout_constraintStart_toStartOf="@id/btn_adicionar_9"
        app:srcCompat="@drawable/outline_scoreboard_24" />

    <ImageView
        android:id="@+id/ivPontos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_adicionar_9_2"
        app:layout_constraintStart_toStartOf="@+id/btn_adicionar_9_2"
        app:srcCompat="@drawable/outline_scoreboard_24" />

</androidx.constraintlayout.widget.ConstraintLayout>