<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NomesdeEqpActivity">

    <ImageView
        android:id="@+id/ivDupla1nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/tvTituloInsira"
        app:layout_constraintTop_toBottomOf="@id/tvTituloInsira"
        app:srcCompat="@drawable/eqp_1" />

    <TextView
        android:id="@+id/tvTituloInsira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/insira_o_nome_das_duplas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:id="@+id/tilDupla1"

        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/ivDupla1nome"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloInsira">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/tiDupla1"
            android:layout_height="wrap_content"
            android:hint="@string/nome_da_dupla_1"
            app:layout_constraintStart_toStartOf="@id/ivDupla1nome"
            app:layout_constraintTop_toBottomOf="@id/ivDupla1nome" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ivDupla2nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/tvTituloInsira"
        app:layout_constraintTop_toTopOf="@+id/tilDupla2"
        app:srcCompat="@drawable/eqp_2" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:id="@+id/tilDupla2"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/ivDupla2nome"
        app:layout_constraintTop_toBottomOf="@+id/tilDupla1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/tiDupla2"
            android:layout_height="wrap_content"
            android:hint="@string/nome_da_dupla_2" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_salvarNomes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btnsalvar"
        app:layout_constraintStart_toStartOf="@+id/tvTituloInsira"
        app:layout_constraintTop_toBottomOf="@+id/tilDupla2" />
</androidx.constraintlayout.widget.ConstraintLayout>